--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -12,22 +12,31 @@ List user
         <span th:text="*{user.username}"></span> : <span th:text="*{user.password}"></span>
     </li>
 </ul>
+<!--Get data from JSON-->
+<h1>GET DATA FROM JSON</h1>
+<div id="json-item"></div>
 
-<div id="images"></div>
+<!--Send data to JSON-->
+<h1>SEND DATA TO JSON</h1>
+<form action="#" method="post">
+    <div>
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" />
+    </div>
+    <div>
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" />
+    </div>
+    <div>
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" />
+    </div>
+    <p>
+        <input type="submit" value="Send" />
+    </p>
+</form>
+
+<div class="result"></div>
 </body>
-<!--<script src="../static/js/login.js"></script>-->
-<script>
-    (function() {
-        var settings = {
-            "url": "http://localhost:8080/api/v1/user",
-            "method": "POST",
-            "timeout": 0,
-            "format": "json",
-        };
-
-        $.getJSON(settings).done(function (response) {
-            console.log(response[0].username);
-        });
-    })();
-</script>
+<script src="/js/login.js"></script>
 </html>
