--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -38,5 +38,5 @@
         });
     });
 </script>
-<script src="../static/js/login.js"></script>
+<script type="text/javascript" src="../static/js/login.js"></script>
 </html>
