--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,7 @@
 
 <body>
 <!--Header-->
-<header>
+<header th:fragment="header>
     <nav class="navbar navbar-expand-lg top-navbar d-block myHeader" data-toggle="sticky-onscroll">
         <div class="container justify-content-end header-hotline">
             <!--Contact Number-->
