--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -18,25 +18,35 @@ List user
 
 <!--Send data to JSON-->
 <h1>SEND DATA TO JSON</h1>
-<form action="#" method="post">
-    <div>
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" />
-    </div>
-    <div>
-        <label for="email">Email</label>
-        <input type="text" name="email" id="email" />
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" />
-    </div>
-    <p>
-        <input type="submit" value="Send" />
-    </p>
-</form>
+<!--<form action="#" method="post" id="registerSubmit">-->
+<!--    <div>-->
+<!--        <label for="name">Name</label>-->
+<!--        <input type="text" name="name" id="name" />-->
+<!--        <div id="userError"></div>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--        <label for="email">Email</label>-->
+<!--        <input type="text" name="email" id="email" />-->
+<!--        <div id="emailError" ></div>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--        <label for="password">Password</label>-->
+<!--        <input type="password" name="password" id="password" />-->
+<!--        <div id="passError" ></div>-->
+<!--    </div>-->
+<!--    <p>-->
+<!--        <input type="submit" value="Send" />-->
+<!--    </p>-->
+<!--</form>-->
 
-<div class="result"></div>
+<!--<div class="result"></div>-->
+
+<form action="/" id="searchForm">
+    <input type="text" name="s" placeholder="Search...">
+    <input type="submit" value="Search">
+</form>
+<!-- the result of the search will be rendered inside this div -->
+<div id="result"></div>
 </body>
 <script src="/js/login.js"></script>
 </html>
