--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -31,12 +31,5 @@
     <div data-includeHTML="common/footer.html"></div>
 </footer>
 </body>
-<script>
-    $(document).ready(function () {
-        $("div[data-includeHTML]").each(function () {
-            $(this).load($(this).attr("data-includeHTML"));
-        });
-    });
-</script>
-<script src="../static/js/login.js"></script>
+<script src="/js/login.js"></script>
 </html>
