add login, forgotPassword, changePassword

--- a/project/src/main/resources/templates/changePassword.html
+++ b/project/src/main/resources/templates/changePassword.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>.::Đăng nhập::.</title>
+    <title>.::Thay đổi mật khẩu::.</title>
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- jQuery library -->
@@ -28,8 +28,8 @@
         <div class="signin-form">
             <div class="login-form-title">
                 <img src="https://img.icons8.com/clouds/130/000000/school.png"/>
-                <h3 class="form-title">Đăng nhập</h3>
-                <p class="form-title-description">Vui lòng điền vào các trường sau để đăng nhập</p>
+                <h3 class="form-title">Thay đổi mật khẩu</h3>
+                <p class="form-title-description">Nên sử dụng những mật khẩu có độ bảo mật cao</p>
             </div>
             <form method="POST" class="login-form" id="login-form">
                 <div class="form-group">
