--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -11,13 +11,15 @@ a:hover {
 /*Header*/
 
 .myHeader {
-    background-color: #2699fb;
+    background-color: #4267b2;
 }
 
 .logo-img {
     max-height: 70px;
 }
-
+.fa-phone {
+    transform: rotate(90deg);
+}
 .navbar-toggler {
     border: 1px solid #FFF;
     margin-right: 30px;
@@ -117,7 +119,7 @@ a:hover {
 /*Footer*/
 
 .footer-area {
-    border-top: 1px solid #2699fb;
+    border-top: 1px solid #4267b2;
 }
 
 .footer-info {
@@ -165,61 +167,69 @@ a:hover {
 /*END Footer*/
 
 /*Login*/
-/*h2{*/
-/*    text-align: center;*/
-/*    font-size: 24px;*/
-/*}*/
-/*hr{*/
-/*    margin-bottom: 30px;*/
-/*}*/
-/*div.container{*/
-/*    width: 960px;*/
-/*    height: 610px;*/
-/*    margin:50px auto;*/
-/*    font-family: 'Droid Serif', serif;*/
-/*    position:relative;*/
-/*}*/
-/*div.main{*/
-/*    width: 320px;*/
-/*    margin-top: 80px;*/
-/*    float:left;*/
-/*    padding: 10px 55px 40px;*/
-/*    background-color: rgba(187, 255, 184, 0.65);*/
-/*    border: 15px solid white;*/
-/*    box-shadow: 0 0 10px;*/
-/*    border-radius: 2px;*/
-/*    font-size: 13px;*/
-/*}*/
-/*input[type=text],[type=password] {*/
-/*    width: 97.7%;*/
-/*    height: 34px;*/
-/*    padding-left: 5px;*/
-/*    margin-bottom: 20px;*/
-/*    margin-top: 8px;*/
-/*    box-shadow: 0 0 5px #00F5FF;*/
-/*    border: 2px solid #00F5FF;*/
-/*    color: #4f4f4f;*/
-/*    font-size: 16px;*/
-/*}*/
-/*label{*/
-/*    color: #464646;*/
-/*    text-shadow: 0 1px 0 #fff;*/
-/*    font-size: 14px;*/
-/*    font-weight: bold;*/
-/*}*/
-/*#login {*/
-/*    width: 100%;*/
-/*    background: linear-gradient(#22abe9 5%, #36caf0 100%);*/
-/*    border: 1px solid #0F799E;*/
-/*    font-size: 20px;*/
-/*    margin-top: 15px;*/
-/*    padding: 8px;*/
-/*    font-weight: bold;*/
-/*    cursor: pointer;*/
-/*    color: white;*/
-/*    text-shadow: 0px 1px 0px #13506D;*/
-/*}*/
-/*#login:hover{*/
-/*    background: linear-gradient(#36caf0 5%, #22abe9 100%);*/
-/*}*/
+.signin-form{
+    width: 390px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background: #f2f2f2;
+    margin: 30px auto;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 60px 50px;
+}
+.login-form-title{
+    text-align: center;
+}
+.form-title-description {
+    font-size: 13px;
+}
+.login-form{
+    width: 100%;
+}
+.form-group {
+    position: relative;
+    margin-bottom: 25px;
+    overflow: hidden;
+}
+.form-group label {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #222;
+}
+.form-group label i {
+    font-size: 18px;
+}
+.form-group input[type=text], .form-group input[type=password] {
+    width: 100%;
+    display: block;
+    border: none;
+    border-bottom: 1px solid #999;
+    padding: 6px 30px;
+    background: transparent;
+    outline: none
+}
+.form-group input[type=text]:focus, .form-group input[type=password]:focus {
+    border-bottom: 1px solid #222;
+}
+.form-button{
+    text-align: center;
+}
+.form-submit {
+    display: inline-block;
+    background: #6dabe4;
+    color: #fff;
+    border-bottom: none;
+    width: auto;
+    padding: 15px 39px;
+    border-radius: 5px;
+    margin-top: 25px;
+    cursor: pointer;
+}
+.form-submit:hover {
+    background: #4292dc;
+}
 /*END Login*/
