--- a/project/src/main/resources/templates/fragments/footer.html
+++ b/project/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <footer class="footer-area footer--light">
+    <footer class="footer-area footer--light" th:fragment="footer">
         <div class="footer-big">
             <!-- start .container -->
             <div class="container">
@@ -15,7 +15,7 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="footer-widget">
                             <div class="widget-about">
-                                <img src="../static/img/logo.png" alt="" class="img-fluid">
+                                <img th:src="@{/img/logo.png}" alt="" class="img-fluid">
                                 <div class="copyright-text mt-3">
                                     <p>© 2020 Bản quyền thuộc về</p>
                                     <p><a href="#">Trường THPT Chuyên Hoàng Văn Thụ</a></p>
