--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="public/img/logo.png" rel="shortcut icon" type="image/x-icon"/>
+    <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
     <title>.::Trường THPT Chuyên Hoàng Văn Thụ::.</title>
 
-    <!--Bootstrap 4-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!--Font-Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- jQuery library -->
+    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
 
-    <link rel="stylesheet" href="../static/css/style.css">
+    <!--Bootstrap 4-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script th:src="@{/js/popper.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <!--Font-Awesome-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
+
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 
 <body>
 <!--Header-->
-<header th:fragment="header>
+<header th:fragment="header">
     <nav class="navbar navbar-expand-lg top-navbar d-block myHeader" data-toggle="sticky-onscroll">
         <div class="container justify-content-end header-hotline">
             <!--Contact Number-->
@@ -36,7 +37,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a href="#">
-                    <img class="logo-img" src="../static/img/logo.png" title=".::Trường THPT Chuyên Hoàng Văn Thụ::."/>
+                    <img class="logo-img" th:src="@{/img/logo.png}" title=".::Trường THPT Chuyên Hoàng Văn Thụ::."/>
                 </a>
             </div>
 
