--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@ List user
     <li th:each="user : ${userList}">
         <!--/*@thymesVar id="username" type="java.lang.String"*/-->
         <span th:text="*{user.username}"></span> : <span th:text="*{user.password}"></span>
+        <span th:text="*{user.name}"></span>
     </li>
 </ul>
 </body>
