--- a/project/src/main/resources/templates/changePassword.html
+++ b/project/src/main/resources/templates/changePassword.html
@@ -27,24 +27,34 @@
     <div class="container">
         <div class="signin-form">
             <div class="login-form-title">
-                <img src="https://img.icons8.com/clouds/130/000000/school.png"/>
+                <img src="https://img.icons8.com/clouds/130/000000/password.png"/>
                 <h3 class="form-title">Thay đổi mật khẩu</h3>
                 <p class="form-title-description">Nên sử dụng những mật khẩu có độ bảo mật cao</p>
             </div>
             <form method="POST" class="login-form" id="login-form">
                 <div class="form-group">
-                    <label for="username"><i class="fa fa-user"></i></label>
-                    <input type="text" name="username" id="username" placeholder="Tên đăng nhập"/>
+                    <div class="form-group-input">
+                        <label for="old-password"><i class="fa fa-lock"></i></label>
+                        <input type="password" name="old-password" id="old-password" placeholder="Mật khẩu cũ"/>
+                    </div>
+                    <label class="error-text error-old-password"></label>
                 </div>
                 <div class="form-group">
-                    <label for="password"><i class="fa fa-lock"></i></label>
-                    <input type="password" name="password" id="password" placeholder="Mật khẩu"/>
+                    <div class="form-group-input">
+                        <label for="new-password"><i class="fa fa-lock"></i></label>
+                        <input type="password" name="new-password" id="new-password" placeholder="Mật khẩu mới"/>
+                    </div>
+                    <label class="error-text error-new-password"></label>
                 </div>
-                <div class="form-group text-center">
-                    <a th:href="@{forgotPassword}">Quên mật khẩu?</a>
+                <div class="form-group">
+                    <div class="form-group-input">
+                        <label for="confirm-password"><i class="fa fa-lock"></i></label>
+                        <input type="password" name="confirm-password" id="confirm-password" placeholder="Xác nhận mật khẩu mới"/>
+                    </div>
+                    <label class="error-text error-confirm-password"></label>
                 </div>
                 <div class="form-group form-button">
-                    <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
+                    <input type="submit" name="confirm" id="confirm" class="form-submit" value="Xác nhận"/>
                 </div>
             </form>
         </div>
@@ -54,5 +64,5 @@
     <div th:replace="fragments/footer :: footer"></div>
 </footer>
 </body>
-<script type="text/javascript" th:src="@{/js/login.js}"></script>
+<script type="text/javascript" th:src="@{/js/validate.js}"></script>
 </html>
