--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -25,7 +26,7 @@
 <div th:replace="fragments/header :: header"></div>
 <main>
     <div class="container">
-        <div class="signin-form">
+        <div class="signin-form col-xl-4 col-md-auto">
             <div class="login-form-title">
                 <img src="https://img.icons8.com/clouds/130/000000/school.png"/>
                 <h3 class="form-title">Đăng nhập</h3>
@@ -33,26 +34,38 @@
             </div>
             <form method="POST" class="login-form" id="login-form">
                 <div class="form-group">
-                    <label for="username"><i class="fa fa-user"></i></label>
-                    <input type="text" name="username" id="username" placeholder="Tên đăng nhập"/>
+                    <div class="form-group-input">
+                        <label for="username"><i class="fa fa-user"></i></label>
+                        <input type="text" name="username" id="username" placeholder="Tên đăng nhập" data-error="#error-username" required/>
+                    </div>
+                    <label class="error-text" id="error-username"></label>
                 </div>
+
                 <div class="form-group">
-                    <label for="password"><i class="fa fa-lock"></i></label>
-                    <input type="password" name="password" id="password" placeholder="Mật khẩu"/>
+                    <div class="form-group-input">
+                        <label for="password"><i class="fa fa-lock"></i></label>
+                        <input type="password" name="password" id="password" placeholder="Mật khẩu" data-error="#error-password" required/>
+                    </div>
+                    <label class="error-text" id="error-password"></label>
                 </div>
                 <div class="form-group text-center">
                     <a th:href="@{forgotPassword}">Quên mật khẩu?</a>
                 </div>
                 <div class="form-group form-button">
-                    <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
+                    <input type="button" name="signin" id="signin" class="form-submit" value="Đăng nhập"/>
                 </div>
+                <div class="errorTxt"></div>
             </form>
         </div>
     </div>
+
+    <div class="test-js"></div>
 </main>
 <footer>
     <div th:replace="fragments/footer :: footer"></div>
 </footer>
 </body>
+<script type="text/javascript" th:src="@{/js/validate.js}"></script>
 <script type="text/javascript" th:src="@{/js/login.js}"></script>
+
 </html>
