--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav pull-left">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">TRANG CHỦ</a>
+                        <a class="nav-link active" th:href="@{/}">TRANG CHỦ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">TIN TỨC</a>
