--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -1,57 +1,44 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <title>.::Trang chủ::.</title>
+    <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
+
+    <!-- jQuery library -->
+    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+    <script type="text/javascript"
+            src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
+
+    <!--Bootstrap 4-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script th:src="@{/js/popper.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <!--Font-Awesome-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
+          type="text/css"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
 <body>
-List user
-<ul>
-    <!--/*@thymesVar id="userList" type="nh"*/-->
-    <li th:each="user : ${userList}">
-        <!--/*@thymesVar id="username" type="java.lang.String"*/-->
-        <span th:text="*{user.username}"></span> : <span th:text="*{user.password}"></span>
-        <p th:text="*{user.roleId}"></p>
-        <p th:text="*{user.classId}"></p>
-        <p th:text="*{user.name}"></p>
-        <p th:text="*{user.phone}"></p>
-        <p th:text="*{user.email}"></p>
-    </li>
-</ul>
-<!--Get data from JSON-->
-<h1>GET DATA FROM JSON</h1>
-<div id="json-item"></div>
-
-<!--Send data to JSON-->
-<h1>SEND DATA TO JSON</h1>
-<!--<form action="#" method="post" id="registerSubmit">-->
-<!--    <div>-->
-<!--        <label for="name">Name</label>-->
-<!--        <input type="text" name="name" id="name" />-->
-<!--        <div id="userError"></div>-->
-<!--    </div>-->
-<!--    <div>-->
-<!--        <label for="email">Email</label>-->
-<!--        <input type="text" name="email" id="email" />-->
-<!--        <div id="emailError" ></div>-->
-<!--    </div>-->
-<!--    <div>-->
-<!--        <label for="password">Password</label>-->
-<!--        <input type="password" name="password" id="password" />-->
-<!--        <div id="passError" ></div>-->
-<!--    </div>-->
-<!--    <p>-->
-<!--        <input type="submit" value="Send" />-->
-<!--    </p>-->
-<!--</form>-->
-
-<!--<div class="result"></div>-->
-
-<form action="/" id="searchForm">
-    <input type="text" name="s" placeholder="Search...">
-    <input type="submit" value="Search">
-</form>
-<!-- the result of the search will be rendered inside this div -->
-<div id="result"></div>
+<div th:replace="fragments/header :: header"></div>
+<div class="container">
+    <h1>This is Homepage</h1>
+    List user
+    <ul>
+        <!--/*@thymesVar id="userList" type="nh"*/-->
+        <li th:each="user : ${userList}">
+            <!--/*@thymesVar id="username" type="java.lang.String"*/-->
+            <span th:text="*{user.username}"></span> : <span th:text="*{user.password}"></span>
+            <p th:text="*{user.roleId}"></p>
+            <p th:text="*{user.classId}"></p>
+            <p th:text="*{user.name}"></p>
+            <p th:text="*{user.phone}"></p>
+            <p th:text="*{user.email}"></p>
+        </li>
+    </ul>
+</div>
+<footer>
+    <div th:replace="fragments/footer :: footer"></div>
+</footer>
 </body>
-<script src="/js/login.js"></script>
 </html>
