--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -35,18 +35,19 @@
             <form method="POST" class="login-form" id="login-form">
                 <div class="form-group">
                     <div class="form-group-input">
-                        <label for="username"><i class="fa fa-user"></i></label>
-                        <input type="text" name="username" id="username" placeholder="Tên đăng nhập" data-error="#error-username" required/>
+                        <label class="input-text"><i class="fa fa-user"></i></label>
+                        <input type="text" id="username" placeholder="Tên đăng nhập" data-error="#error-username" required/>
                     </div>
                     <label class="error-text" id="error-username"></label>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group-input">
-                        <label for="password"><i class="fa fa-lock"></i></label>
-                        <input type="password" name="password" id="password" placeholder="Mật khẩu" data-error="#error-password" required/>
+                        <label class="input-text"><i class="fa fa-lock"></i></label>
+                        <input type="password"  id="password" placeholder="Mật khẩu" data-error="#error-password" required/>
                     </div>
                     <label class="error-text" id="error-password"></label>
+                    <div class="errorTxt"></div>
                 </div>
                 <div class="form-group text-center">
                     <a th:href="@{forgotPassword}">Quên mật khẩu?</a>
@@ -54,12 +55,23 @@
                 <div class="form-group form-button">
                     <input type="button" name="signin" id="signin" class="form-submit" value="Đăng nhập"/>
                 </div>
-                <div class="errorTxt"></div>
             </form>
         </div>
     </div>
 
-    <div class="test-js"></div>
+    <!--    Modal Login Success-->
+    <div class="modal" tabindex="-1" role="dialog" id="loginSuccess">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h5>Đăng nhập thành công!</h5>
+                </div>
+                <div class="modal-footer">
+                    <a type="button" class="btn btn-primary" th:href="@{/}">Xác nhận</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 <footer>
     <div th:replace="fragments/footer :: footer"></div>
