update validate and commit

--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -36,7 +36,8 @@
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text"><i class="fa fa-user"></i></label>
-                        <input type="text" id="username" placeholder="Tên đăng nhập" data-error="#error-username" required/>
+                        <input type="text" id="username" name="username" placeholder="Tên đăng nhập" data-error="#error-username"
+                               required/>
                     </div>
                     <label class="error-text" id="error-username"></label>
                 </div>
@@ -44,7 +45,8 @@
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text"><i class="fa fa-lock"></i></label>
-                        <input type="password"  id="password" placeholder="Mật khẩu" data-error="#error-password" required/>
+                        <input type="password" id="password" name="password" placeholder="Mật khẩu" data-error="#error-password"
+                               required/>
                     </div>
                     <label class="error-text" id="error-password"></label>
                     <div class="errorTxt"></div>
