--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -79,7 +79,7 @@
     <div th:replace="fragments/footer :: footer"></div>
 </footer>
 </body>
-<script type="text/javascript" th:src="@{/js/validate.js}"></script>
+<!--<script type="text/javascript" th:src="@{/js/validate.js}"></script>-->
 <script type="text/javascript" th:src="@{/js/login.js}"></script>
 
 </html>
