--- a/project/src/main/resources/templates/changePassword.html
+++ b/project/src/main/resources/templates/changePassword.html
@@ -34,25 +34,23 @@
             <form method="POST" class="login-form" id="login-form">
                 <div class="form-group">
                     <div class="form-group-input">
-                        <label for="old-password"><i class="fa fa-lock"></i></label>
+                        <label class="input-text" for="old-password"><i class="fa fa-lock"></i></label>
                         <input type="password" name="old-password" id="old-password" placeholder="Mật khẩu cũ"/>
                     </div>
-                    <label class="error-text error-old-password"></label>
                 </div>
                 <div class="form-group">
                     <div class="form-group-input">
-                        <label for="new-password"><i class="fa fa-lock"></i></label>
+                        <label class="input-text" for="new-password"><i class="fa fa-lock"></i></label>
                         <input type="password" name="new-password" id="new-password" placeholder="Mật khẩu mới"/>
                     </div>
-                    <label class="error-text error-new-password"></label>
                 </div>
                 <div class="form-group">
                     <div class="form-group-input">
-                        <label for="confirm-password"><i class="fa fa-lock"></i></label>
+                        <label class="input-text" for="confirm-password"><i class="fa fa-lock"></i></label>
                         <input type="password" name="confirm-password" id="confirm-password" placeholder="Xác nhận mật khẩu mới"/>
                     </div>
-                    <label class="error-text error-confirm-password"></label>
                 </div>
+                <div class="errorTxt"></div>
                 <div class="form-group form-button">
                     <input type="submit" name="confirm" id="confirm" class="form-submit" value="Xác nhận"/>
                 </div>
@@ -64,5 +62,4 @@
     <div th:replace="fragments/footer :: footer"></div>
 </footer>
 </body>
-<script type="text/javascript" th:src="@{/js/validate.js}"></script>
 </html>
