--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -252,3 +252,171 @@ a:hover {
 }
 
 /*END Login*/
+
+
+/*Manage Account*/
+
+.panel-body {
+    display: none;
+}
+
+.clickable {
+    cursor: pointer;
+    width: 100px;
+}
+
+.table-wrapper {
+    margin: 30px 0;
+    padding: 20px 25px;
+}
+
+.table-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.table-striped {
+    border: 1px solid #ddd;
+    padding: 20px;
+}
+
+.table-thead {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 10px;
+}
+
+.table-tbody:hover {
+    background-color: #f5f5f5;
+}
+
+.table-tbody {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.table-tbody.selected {
+    background-color: #007bff40;
+}
+
+.panel-heading {
+    margin-right: 10px;
+}
+
+.panel-body {
+    padding: 10px 20px;
+    margin: 10px 50px;
+    border-radius: 5px;
+}
+
+.user-full-info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.info-left, .info-right {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    width: 45%;
+}
+
+.info-line {
+    display: flex;
+    border-bottom: 1px solid #ddd;
+    margin: 0 10px;
+    padding: 5px 0;
+    justify-content: space-between;
+}
+
+.info-line:last-child {
+    border: none;
+}
+
+.user-info-hide {
+    font-weight: 500;
+}
+
+.user-info-show {
+    font-size: 13px;
+}
+
+.info-title {
+    text-transform: uppercase;
+    color: #9ca2a9;
+    font-weight: 500;
+}
+
+.user-avatar {
+}
+
+.user-text {
+}
+
+/* Custom checkbox */
+.custom-checkbox {
+    position: relative;
+    margin-left: 10px;
+}
+
+.custom-checkbox input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    margin: 5px 0 0 3px;
+    z-index: 9;
+}
+
+.custom-checkbox label:before {
+    width: 18px;
+    height: 18px;
+}
+
+.custom-checkbox label:before {
+    content: '';
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: text-top;
+    background: white;
+    border: 1px solid #bbb;
+    border-radius: 2px;
+    box-sizing: border-box;
+    z-index: 2;
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:after {
+    content: '';
+    position: absolute;
+    left: 6px;
+    top: 3px;
+    width: 6px;
+    height: 11px;
+    border: solid #000;
+    border-width: 0 3px 3px 0;
+    transform: inherit;
+    z-index: 3;
+    transform: rotateZ(45deg);
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:before {
+    border-color: #03A9F4;
+    background: #03A9F4;
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:after {
+    border-color: #fff;
+}
+
+.custom-checkbox input[type="checkbox"]:disabled + label:before {
+    color: #b8b8b8;
+    cursor: auto;
+    box-shadow: none;
+    background: #ddd;
+}
+
+/*END Manage Account*/
