--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -8,7 +8,6 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
-    <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -36,16 +35,16 @@
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text"><i class="fa fa-user"></i></label>
-                        <input type="text" id="username" name="username" placeholder="Tên đăng nhập" data-error="#error-username"
-                               required/>
+                        <input type="text" id="username" name="username" placeholder="Tên đăng nhập"
+                               data-error="#error-username" required/>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text"><i class="fa fa-lock"></i></label>
-                        <input type="password" id="password" name="password" placeholder="Mật khẩu" data-error="#error-password"
-                               required/>
+                        <input type="password" id="password" name="password" placeholder="Mật khẩu"
+                               data-error="#error-password" required/>
                     </div>
                 </div>
                 <div class="errorTxt"></div>
@@ -78,5 +77,4 @@
 </footer>
 </body>
 <script type="text/javascript" th:src="@{/js/login.js}"></script>
-
 </html>
