--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -256,15 +256,6 @@ a:hover {
 
 /*Manage Account*/
 
-.panel-body {
-    display: none;
-}
-
-.clickable {
-    cursor: pointer;
-    width: 100px;
-}
-
 .table-wrapper {
     margin: 30px 0;
     padding: 20px 25px;
@@ -277,87 +268,25 @@ a:hover {
     padding: 10px 0;
 }
 
-.table-striped {
-    border: 1px solid #ddd;
-    padding: 20px;
-}
-
-.table-thead {
+.table-title-2 {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    border-bottom: 2px solid #ddd;
-    padding-bottom: 10px;
-}
-
-.table-tbody:hover {
-    background-color: #f5f5f5;
-}
-
-.table-tbody {
-    display: flex;
-    justify-content: space-between;
     padding: 10px 0;
-    align-items: center;
-    border-bottom: 1px solid #ddd;
 }
 
-.table-tbody.selected {
-    background-color: #007bff40;
-}
-
-.panel-heading {
-    margin-right: 10px;
-}
-
-.panel-body {
-    padding: 10px 20px;
-    margin: 10px 50px;
-    border-radius: 5px;
-}
-
-.user-full-info {
-    display: flex;
-    justify-content: space-between;
-}
-
-.info-left, .info-right {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    width: 45%;
-}
-
-.info-line {
-    display: flex;
-    border-bottom: 1px solid #ddd;
+.table-title-2 div a {
     margin: 0 10px;
-    padding: 5px 0;
-    justify-content: space-between;
 }
 
-.info-line:last-child {
-    border: none;
+.table thead th {
+    vertical-align: baseline!important;
 }
 
-.user-info-hide {
-    font-weight: 500;
+tr.selected {
+    background-color: #007bff40!important;
 }
 
-.user-info-show {
-    font-size: 13px;
-}
-
-.info-title {
-    text-transform: uppercase;
-    color: #9ca2a9;
-    font-weight: 500;
-}
-
-.user-avatar {
-}
-
-.user-text {
-}
 
 /* Custom checkbox */
 .custom-checkbox {
