--- a/project/src/main/resources/templates/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount.html
@@ -24,86 +24,89 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <div class="col-sm-6">
-                <h2>Danh sách tài khoản</b></h2>
+            <div class="row d-flex justify-content-between align-items-center">
+                <h2>Danh sách tài khoản</h2>
             </div>
             <div class="col-sm-6 text-right">
-                <a th:href="@{/createAccount}" class="btn btn-success" data-toggle="modal">
+                <a th:href="@{createAccount}" class="btn btn-success" data-toggle="modal">
                     <span>Tạo tài khoản</span>
                 </a>
             </div>
         </div>
-        <div class="table table-striped table-hover">
-            <div class="table-thead">
+        <div class="table-title-2">
+            <div class="col-sm-6 d-flex justify-content-end align-items-center">
+                <a th:href="@{resetPassword}" class="btn btn-success" data-toggle="modal">
+                    <span>Đặt lại MK</span>
+                </a>
+                <a href="#deleteAccountModal" class="btn btn-success" data-toggle="modal">
+                    <span>Xóa</span>
+                </a>
+                <input type="text" placeholder="Tìm kiếm...">
+            </div>
+        </div>
+        <table class="table table-hover">
+            <thead>
+            <tr class="align-items-center">
+                <th>
                     <span class="custom-checkbox">
                         <input type="checkbox" id="selectAll">
                         <label for="selectAll"></label>
                     </span>
-                <div class="col-sm-6 d-flex justify-content-between align-items-center">
-                    <a th:href="@{/resetPassword}" class="btn btn-success"
-                       data-toggle="modal"><span>Đặt lại MK</span></a>
-                    <a th:href="@{#deleteAccountModal}" class="btn btn-success"
-                       data-toggle="modal"><span>Xóa</span></a>
-                    <div>Tìm kiếm</div>
-                </div>
-            </div>
-            <div class="panel panel-primary" th:each="user : ${userList}">
-                <div class="table-tbody">
-                    <div class="user-checkbox d-flex align-items-center">
-                        <span class="custom-checkbox">
-                            <input type="checkbox" th:id="'checkbox' + ${user.username}" name="options[]" value="1">
-                            <label th:for="'checkbox' + ${user.username}"></label>
-                        </span>
-                        <div class="user-info-show d-flex justify-content-between align-items-center">
-                            <div class="user-avatar">
-                                <img src="https://img.icons8.com/bubbles/80/000000/gender-neutral-user.png"/>
-                            </div>
-                            <div class="user-text">
-                                <h5 th:text="*{user.username}"></h5>
-                                <span th:text="*{user.name}"></span>
-                            </div>
+                </th>
+                <th>Tên đăng nhập</th>
+                <th>Họ và tên</th>
+                <th>Chức vụ</th>
+                <th>Lớp</th>
+                <th>SĐT</th>
+                <th>Email</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody th:each="user : ${userList}">
+            <tr>
+                <td>
+                    <span class="custom-checkbox">
+                        <input type="checkbox" th:id="'checkbox' + ${user.username}" name="options[]" value="1">
+                        <label th:for="'checkbox' + ${user.username}"></label>
+                    </span>
+                </td>
+                <td><span th:text="*{user.username}"></span></td>
+                <td><span th:text="*{user.name}"></span></td>
+                <td><span th:text="*{user.roleId}"></span></td>
+                <td><span th:text="*{user.classId}"></span></td>
+                <td><span th:text="*{user.phone}"></span></td>
+                <td><span th:text="*{user.email}"></span></td>
+                <td>
+                    <a th:href="@{editAccount/id}" class="edit" data-toggle="modal">
+                        <i class="material-icons" data-toggle="tooltip" title="Sửa">&#xE254;</i>
+                    </a>
+                    <a href="#deleteAccountModal" class="delete" data-toggle="modal">
+                        <i class="material-icons" data-toggle="tooltip" title="Xóa">&#xE872;</i>
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
-                        </div>
-                    </div>
-                    <div class="panel-heading">
-                        <span class="clickable btn btn-success filter" data-toggle="tooltip"
-                              title="Xem thông tin tài khoản"
-                              data-container="body">Xem</span>
-                    </div>
+<!-- Delete Modal HTML -->
+<div id="deleteAccountModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form>
+                <div class="modal-header">
+                    <h4 class="modal-title">Xóa tài khoản</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
-                <div class="panel-body">
-                    <div class="user-full-info">
-                        <div class="info-left">
-                            <div class="info-line">
-                                <div class="user-info-hide"><span th:text="*{user.name}"></span></div>
-                                <div class="info-title">Họ và tên</div>
-                            </div>
-                            <div class="info-line">
-                                <div class="user-info-hide"><span th:text="*{user.roleId}"></span></div>
-                                <div class="info-title">Chức vụ</div>
-                            </div>
-                            <div class="info-line">
-                                <div class="user-info-hide"><span th:text="*{user.classId}"></span></div>
-                                <div class="info-title">Lớp</div>
-                            </div>
-                        </div>
-                        <div class="info-right">
-                            <div class="info-line">
-                                <div class="user-info-hide"><span th:text="*{user.username}"></span></div>
-                                <div class="info-title">Tên đăng nhập</div>
-                            </div>
-                            <div class="info-line">
-                                <div class="user-info-hide"><span th:text="*{user.phone}"></span></div>
-                                <div class="info-title">SĐT</div>
-                            </div>
-                            <div class="info-line">
-                                <div class="user-info-hide"><span th:text="*{user.email}"></span></div>
-                                <div class="info-title">Email</div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="modal-body">
+                    <p>Bạn có chắc muốn <b>XÓA</b> tài khoản này không?</p>
                 </div>
-            </div>
+                <div class="modal-footer">
+                    <input type="submit" class="btn btn-danger" value="CÓ">
+                    <input type="button" class="btn btn-default" data-dismiss="modal" value="KHÔNG">
+                </div>
+            </form>
         </div>
     </div>
 </div>
