--- a/project/src/main/resources/templates/resetPassword.html
+++ b/project/src/main/resources/templates/resetPassword.html
@@ -28,16 +28,10 @@
         <div class="signin-form">
             <div class="login-form-title">
                 <img src="https://img.icons8.com/clouds/130/000000/password.png"/>
-                <h3 class="form-title">Thay đổi mật khẩu</h3>
+                <h3 class="form-title">Đặt lại mật khẩu</h3>
                 <p class="form-title-description">Nên sử dụng những mật khẩu có độ bảo mật cao</p>
             </div>
             <form method="POST" class="login-form" id="login-form">
-                <div class="form-group">
-                    <div class="form-group-input">
-                        <label class="input-text" for="old-password"><i class="fa fa-lock"></i></label>
-                        <input type="password" name="old-password" id="old-password" placeholder="Mật khẩu cũ"/>
-                    </div>
-                </div>
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text" for="new-password"><i class="fa fa-lock"></i></label>
@@ -47,7 +41,8 @@
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text" for="confirm-password"><i class="fa fa-lock"></i></label>
-                        <input type="password" name="confirm-password" id="confirm-password" placeholder="Xác nhận mật khẩu mới"/>
+                        <input type="password" name="confirm-password" id="confirm-password"
+                               placeholder="Xác nhận mật khẩu mới"/>
                     </div>
                 </div>
                 <div class="errorTxt"></div>
@@ -64,10 +59,10 @@
             <div class="modal-content">
                 <div class="modal-body text-center">
                     <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/1ABC9C/ok--v1.png"/>
-                    <h5>Mật khẩu thay đổi thành công!</h5>
+                    <h5>Mật khẩu đã được đặt lại!</h5>
                 </div>
                 <div class="modal-footer">
-                    <a type="button" class="btn btn-primary" th:href="@{login}">ĐÓNG</a>
+                    <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
                 </div>
             </div>
         </div>
@@ -75,7 +70,7 @@
 </main>
 <footer>
     <div th:replace="fragments/footer :: footer"></div>
-    <script type="text/javascript" th:src="@{/js/changePassword.js}"></script>
+    <script type="text/javascript" th:src="@{/js/resetPassword.js}"></script>
 </footer>
 </body>
 </html>
