Update combobox search role name

--- a/project/src/main/resources/templates/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount.html
@@ -48,10 +48,9 @@
                     <div class="search-line">
                         <span>Chức vụ</span>
                         <div class="searchable">
-                            <input type="text" placeholder="Chức vụ" id="search-role"
+                            <input type="text" placeholder="Chức vụ"
                                    onkeyup="filterFunction(this,event)">
-                            <ul>
-                                <li></li>
+                            <ul id="search-role">
                             </ul>
                         </div>
                     </div>
