Create createAccount and userInformation template

--- a/project/src/main/resources/templates/changePassword.html
+++ b/project/src/main/resources/templates/changePassword.html
@@ -18,7 +18,7 @@
           type="text/css"/>
 
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
-
+    <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
 
 <body>
@@ -47,7 +47,8 @@
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text" for="confirm-password"><i class="fa fa-lock"></i></label>
-                        <input type="password" name="confirm-password" id="confirm-password" placeholder="Xác nhận mật khẩu mới"/>
+                        <input type="password" name="confirm-password" id="confirm-password"
+                               placeholder="Xác nhận mật khẩu mới"/>
                     </div>
                 </div>
                 <div class="errorTxt"></div>
