--- a/project/src/main/resources/templates/resetPassword.html
+++ b/project/src/main/resources/templates/resetPassword.html
@@ -18,7 +18,7 @@
           type="text/css"/>
 
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
-
+    <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
 
 <body>
@@ -62,7 +62,7 @@
                     <h5>Mật khẩu đã được đặt lại!</h5>
                 </div>
                 <div class="modal-footer">
-                    <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
+                    <a th:href="@{manageAccount}" class="btn btn-primary"><span>ĐÓNG</span></a>
                 </div>
             </div>
         </div>
