--- a/project/src/main/resources/templates/forgotPassword.html
+++ b/project/src/main/resources/templates/forgotPassword.html
@@ -18,7 +18,7 @@
           type="text/css"/>
 
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
-
+    <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
 
 <body>
@@ -29,7 +29,8 @@
             <div class="login-form-title">
                 <img src="https://img.icons8.com/bubbles/130/000000/man-window-lock.png"/>
                 <h3 class="form-title">Quên mật khẩu</h3>
-                <p class="form-title-description">Trong trường hợp này bạn cần liên hệ với Hotline để đặt lại mật khẩu.</p>
+                <p class="form-title-description">Trong trường hợp này bạn cần liên hệ với Hotline để đặt lại mật
+                    khẩu.</p>
                 <h5 class="form-title">Hotline: 02183 855 550</h5>
             </div>
         </div>
