--- a/project/src/main/resources/templates/fragments/footer.html
+++ b/project/src/main/resources/templates/fragments/footer.html
@@ -18,7 +18,7 @@
                                 <img th:src="@{/img/logo.png}" alt="" class="img-fluid">
                                 <div class="copyright-text mt-3">
                                     <p>© 2020 Bản quyền thuộc về</p>
-                                    <p><a href="#">Trường THPT Chuyên Hoàng Văn Thụ</a></p>
+                                    <p><a href="#"><b>Trường THPT Chuyên Hoàng Văn Thụ</b></a></p>
                                     <p><a href="#">Design by Group G24</a></p>
                                 </div>
                             </div>
