--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -16,27 +16,17 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
           type="text/css"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <h1>This is Homepage</h1>
-    List user
-    <ul>
-        <!--/*@thymesVar id="userList" type="nh"*/-->
-        <li th:each="user : ${userList}">
-            <!--/*@thymesVar id="username" type="java.lang.String"*/-->
-            <span th:text="*{user.username}"></span> : <span th:text="*{user.password}"></span>
-            <p th:text="*{user.roleId}"></p>
-            <p th:text="*{user.classId}"></p>
-            <p th:text="*{user.name}"></p>
-            <p th:text="*{user.phone}"></p>
-            <p th:text="*{user.email}"></p>
-        </li>
-    </ul>
+
 </div>
 <footer>
     <div th:replace="fragments/footer :: footer"></div>
+
 </footer>
 </body>
 </html>
