--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
           type="text/css"/>
 
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
-
+    <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
 
 <body>
